# JobApplier

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
samples/: config.yaml  jobs.json  profile.yaml
src/jobapplier/: __init__.py  cli.py  config.py  profile.py  scoring.py  storage.py  workflow.py
src/jobapplier/notifiers/: base.py  cli.py
src/jobapplier/sources/: base.py  linkedin.py  mock.py
